--- a/exercises/practice/satellite/.meta/config.json
+++ b/exercises/practice/satellite/.meta/config.json
@@ -1,5 +1,4 @@
 {
-  "blurb": "Rebuild binary trees from pre-order and in-order traversals.",
   "authors": [
     "juhlig"
   ],
@@ -18,5 +17,6 @@
     "example": [
       ".meta/example.erl"
     ]
-  }
+  },
+  "blurb": "Rebuild binary trees from pre-order and in-order traversals."
 }
