--- a/.github/workflows/uuid.yml
+++ b/.github/workflows/uuid.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   uuid:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
     - run: sudo apt install --yes jq
