--- a/config.json
+++ b/config.json
@@ -26,7 +26,7 @@
       "test/%{snake_slug}_tests.erl"
     ],
     "example": [
-      "src/example.erl"
+      ".meta/example.erl"
     ],
     "exemplar": [
       ".meta/exemplar.erl"
