--- a/config.json
+++ b/config.json
@@ -961,6 +961,14 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1
+      },
+      {
+        "slug": "reverse-string",
+        "name": "Reverse String",
+        "uuid": "9400fc2a-b3e8-4982-883b-a2d574a1d7ee",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 1
       }
     ],
     "foregone": [
