--- a/config.json
+++ b/config.json
@@ -186,6 +186,14 @@
         ]
       },
       {
+        "slug": "yacht",
+        "name": "Yacht",
+        "uuid": "cc32f30a-a2bf-42c9-83bd-90dac5067799",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 2
+      },
+      {
         "slug": "darts",
         "name": "Darts",
         "uuid": "72c8d390-4f07-4ec2-8e5a-4f57cf04e29c",
