update global conf

--- a/config.json
+++ b/config.json
@@ -1021,6 +1021,14 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 5
+      },
+      {
+        "slug": "dnd-character",
+        "name": "D&D Character",
+        "uuid": "4fc39dbe-4515-40d6-a59a-2098887b2a76",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 1
       }
     ],
     "foregone": [
